# dawn-mre-android

./: CMakeLists.txt  README.md  main.cpp
.github/workflows/: android.yml
